--- a/.github/workflows/firstworkflow.yaml
+++ b/.github/workflows/firstworkflow.yaml
@@ -13,11 +13,14 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       
-      - name: Run a oneline scirpt
+      - name: create go module
         run: go mod init main
       
-      - name: Run a custom script
+      - name: build go app
         run: go build main.go
+
+      - name: docker version
+        run: docker -v
 
         
 
