--- a/.github/workflows/firstworkflow.yaml
+++ b/.github/workflows/firstworkflow.yaml
@@ -22,6 +22,12 @@ jobs:
       - name: docker version
         run: docker -v
 
+      - name: docker image list
+        run: docker image -a
+
+      - name: docker duild
+        run: docker build -t chaitanyajarajapu/mymultiimage:10.0 .
+
         
 
 
