--- a/.github/workflows/firstworkflow.yaml
+++ b/.github/workflows/firstworkflow.yaml
@@ -26,16 +26,27 @@ jobs:
         run: docker image ls
 
       - name: docker login
-        run: docker login --username ${{ secrets.dockerusername }} --password ${{ secrets.dockerpassword }}
+        run: docker login --username $ {{ secrets.dockerusername }} --password $ {{ secrets.dockerpassword }}
 
       - name: docker duild
         run: docker build -t chaitanyajarajapu/mymultiimage:10.0 .
 
       - name: docker image list
         run: docker image ls
+        if: always()
 
       - name: docker image push
         run: docker push chaitanyajarajapu/mymultiimage:10.0
+
+      - name: Azure login with Github action
+        uses: azure/login@v1
+        with:
+          creds: '$ {{ secrets.AZURECREDENTIALS}}'
+
+      - name: Azure login command
+        run: |
+          az account show
+          az group list
   
 
 
